--- a/README
+++ b/README
@@ -4,3 +4,4 @@ To use it:
     1. clone the repository to ~/.vim
     2. symlink your .vimrc to ~/.vim/vimrc with the following command:
         ln -s ~/.vim/vimrc .vimrc
+    3. cd ~/.vim && git submodule init && git submodule update
